# -parallel_search_min_max

./: README.md  meson.build  parallel_search_min_max.c
